# get_market_data

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: gmd.cpp  gmd.h  gmd_i_curl_getter.h  gmd_ms_curl_getter.cpp  gmd_ms_curl_getter.h  gmd_types.h  gmd_util.h  gmd_yahoo_curl_getter.cpp  gmd_yahoo_curl_getter.h
